--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,8 @@
 node_modules
+npm-debug.log
+Dockerfile
+.dockerignore
 .git
 .gitignore
-Dockerfile
+.env
 docker-compose.yml
-README.md
-.dockerignore
