--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
     volumes:
       - ./:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./.seed_completed:/app/.seed_completed
     depends_on:
       - postgres
     networks:
@@ -28,7 +27,6 @@ services:
     volumes:
       - ./:/app
       - /app/node_modules
-      - ./.seed_completed:/app/.seed_completed
     depends_on:
       - postgres
     networks:
@@ -53,6 +51,11 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=studentDSS
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: always
 
 networks:
@@ -61,22 +64,6 @@ networks:
 
 volumes:
   postgres-data:
-      - ./:/app
-      - /app/node_modules
-      - ./.seed_completed:/app/.seed_completed
-    depends_on:
-      - postgres
-    networks:
-      - student-dss-network
-    environment:
-      - POSTGRES_URI=postgres://postgres:password@postgres:5432/studentDSS
-      - NODE_ENV=development
-    restart: "no"
+    driver: local
 
-networks:
-  student-dss-network:
-    driver: bridge
-
-volumes:
-  postgres-data:
 
