--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "npx nodemon server.js",
-    "seed": "node scripts/seedDatabase.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed-universities": "node scripts/seedUniversities.js",
-    "migrate": "node scripts/migrateDatabase.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -29,4 +26,4 @@
     "nodemon": "^2.0.22"
   }
 }
-}
+
