--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,26 @@ version: '3.8'
 
 services:
   student-dss:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: student-dss
     ports:
-      - "8080:80"
+      - "80:80"  # This is expecting to serve NGINX on port 80
     volumes:
-      - ./:/usr/share/nginx/html
+      - ./public:/usr/share/nginx/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - postgres
+      - ./data:/app/data  # Mount the data directory for SQLite persistence
     networks:
       - student-dss-network
-    environment:
-      - POSTGRES_URI=postgres://postgres:password@postgres:5432/studentDSS
     restart: always
+    depends_on:
+      - api
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
   api:
     build:
@@ -26,44 +32,31 @@ services:
       - "3000:3000"
     volumes:
       - ./:/app
-      - /app/node_modules
-    depends_on:
-      - postgres
+      - /app/node_modules  # This tells Docker to not sync this directory with host
+      - ./data:/app/data  # Mount the data directory for SQLite persistence
     networks:
       - student-dss-network
     environment:
-      - POSTGRES_URI=postgres://postgres:password@postgres:5432/studentDSS
       - NODE_ENV=development
+      - SQLITE_PATH=/app/data/studentDSS.db
+      - PORT=3000
+      - HOST=0.0.0.0
     restart: always
     command: npm run dev
-
-  postgres:
-    image: postgres:14
-    container_name: student-dss-postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-      - ./data/init-postgres.sql:/docker-entrypoint-initdb.d/init-postgres.sql:ro
-    networks:
-      - student-dss-network
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=studentDSS
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 5s
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 10s
       timeout: 5s
-      retries: 5
-    restart: always
+      retries: 3
 
 networks:
   student-dss-network:
     driver: bridge
 
 volumes:
-  postgres-data:
-    driver: local
+  api_node_modules:
+
+
+
 
 
