--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,43 @@
 server {
     listen 80;
     server_name localhost;
+
+    # Root directory for static files
     root /usr/share/nginx/html;
     index index.html;
 
+    # Serve static frontend files
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy API requests to the API service
+    location /api/ {
+        proxy_pass http://api:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout 300;
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
     }
 
     # Caching static files
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
         expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
     }
 
     # Error pages
     error_page 404 /404.html;
     error_page 500 502 503 504 /50x.html;
+    location = /404.html {
+        root /usr/share/nginx/html;
+    }
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
+
