--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "dev": "npx nodemon server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init-db": "node ./scripts/initializeDatabase.js",
+    "postinstall": "npm rebuild sqlite3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-pg-simple": "^8.0.0",
+    "connect-sqlite3": "^0.9.13",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.11.3",
+    "sqlite3": "^5.1.6",
     "@faker-js/faker": "^8.0.2"
   },
   "devDependencies": {
