--- a/nginx.conf
+++ b/nginx.conf
@@ -6,22 +6,29 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Serve static frontend files
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Proxy API requests to the API service
+    # Node.js API proxy
     location /api/ {
-        proxy_pass http://api:3000;
+        proxy_pass http://api:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+    }
+
+    # Python API proxy
+    location /api/python/ {
+        proxy_pass http://python-api:5000/api/python/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Serve static frontend files
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     # Caching static files
